# AnimCV

./: .gitignore  Architecture_v2.md  CLAUDE.md  README.md  README_EXEC.md  USAGE_GUI.ko.md  USAGE_GUI.md  build_full_mac.sh  build_full_windows.bat  build_mmcv_test.bat  build_mmdet_test.bat  build_windows.ps1  pyproject.toml  test_cl.bat  test_cl2.bat
examples/: demo_mapping_profile.json  sample_config.yaml
mac/: build_full_mac.command  build_full_mac.sh  build_gui_mac.command  build_gui_mac.sh  setup_mac.command  setup_mac.sh
scripts/: apply_motion.py
src/app/: cli.py  config.py  gui.py
src/blender/: executor.py  export.py  keyframe_writer.py
src/common/: serialization.py  types.py
src/mediaio/: cache.py  frame_sequence.py  video_loader.py
src/motion/: motion_builder.py  motion_graph.py  motion_io.py
src/optimize/: collapse.py  importance.py  report.py
src/pose/: default_model.py  depth_estimator.py  depth_sampling.py  mmpose_adapter.py  pose_types.py  schemas.py
src/retarget/: axis_utils.py  fk_solver.py  ik_solver.py  solver.py
src/rig/: bone_mapping.py  rig_parser.py  rig_profile.py
src/ui/: debug_viewer.py  (+3 more)
tests/: fake_bpy.py  test_apply_motion_script.py  test_axis_utils.py  test_blender_executor.py  test_bone_mapping.py  test_cli.py  test_debug_viewer.py  test_default_model.py  test_depth.py  test_fk_solver.py  test_gui_app.py  test_ik_solver.py  test_importance.py  test_keyframe_collapse.py  test_mapping_ui.py  test_mmpose_adapter.py  test_motion_builder.py  test_motion_graph.py  test_retarget_solver.py  test_rig_parser.py  test_serialization.py  test_video_loader.py
windows/: build_full_windows.bat  build_gui_windows.bat  build_windows.ps1
