[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "animcv"
version = "0.1.0"
description = "Assisted video-to-armature motion capture and retargeting tool"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opencv-python",
    "pyyaml",
]

[project.optional-dependencies]
pose = ["mmpose", "mmcv", "mmengine", "mmdet"]
dev = ["pytest"]

[project.scripts]
motion-tool = "app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
