[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "animcv"
version = "0.1.0"
description = "Assisted video-to-armature motion capture and retargeting tool"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opencv-python",
    "pyyaml",
]

[project.optional-dependencies]
pose = [
    "mmpose",
    "mmcv>=2.0.0rc4,<2.2.0",
    "mmengine",
    "mmdet",
    # mmpose's xtcocotools/pycocotools wheels are compiled against numpy's
    # pre-2.0 C ABI (dtype struct layout changed in numpy 2.0), and
    # opencv-python>=4.10 requires numpy>=2 -- so both must stay below
    # those lines together for this stack to import at all.
    "numpy<2",
    "opencv-python<4.10",
]
depth = ["torch", "opencv-python", "matplotlib"]
dev = ["pytest"]

[project.scripts]
motion-tool = "app.cli:main"
motion-tool-gui = "app.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
